# search_for_vacancies

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml  test_uesr_vacancies.json  user.py  user_vacancies.json  vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_04e2950766bc0f15___init___py.html  z_04e2950766bc0f15_hh_api_client_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_user_py.html  z_532385f02888fdd3___init___py.html  z_532385f02888fdd3_vacancy_service_py.html  z_92f1bd64d4f77bd0___init___py.html  z_92f1bd64d4f77bd0_json_handler_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_hh_api_client_py.html  z_a44f0ac069e85531_test_json_handler_py.html  z_a44f0ac069e85531_test_user_py.html  z_a44f0ac069e85531_test_vacancy_service_py.html
src/: api_client.py  file_manager.py  user.py  utils.py  vacancy_service.py
src/api/: hh_api_client.py
src/handler_file/: json_handler.py
src/models/: vacancy_service.py
tests/: test_api_client.py  test_file_manager.py  test_hh_api_client.py  test_json_handler.py  test_user.py  test_vacancy_service.py
